--- a/src/test/java/com/googleintern/wfm/ruleengine/BUILD.bazel
+++ b/src/test/java/com/googleintern/wfm/ruleengine/BUILD.bazel
@@ -58,7 +58,10 @@ java_test(
 
 java_test(
     name = "GeneralRulesForWorkgroupIdTest",
+    size = "large",
     srcs = ["GeneralRulesForWorkgroupIdTest.java"],
+    test_class = "src.test.java.com.googleintern.wfm.ruleengine.GeneralRulesForWorkgroupIdTest",
+    visibility = ["//visibility:public"],
     deps = [
         "//src/main/java/com/googleintern/wfm/ruleengine/action:CasePoolIdAndPermissionIdGroupingUtil",
         "//src/main/java/com/googleintern/wfm/ruleengine/action:CsvParser",
