--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -10,17 +10,17 @@ alias(
 )
 
 alias(
-    name = "DataProcessing",
+    name = "DataProcessor",
     actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:DataProcessor",
 )
 
 alias(
-    name = "GroupByWorkgroupId",
+    name = "WorkgroupIdGroupingUtil",
     actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:WorkgroupIdGroupingUtil",
 )
 
 alias(
-    name = "GroupByCasePoolIdAndPermissionId",
+    name = "CasePoolIdAndPermissionIdGroupingUtil",
     actual = "//src/main/java/com/googleintern/wfm/ruleengine/action:CasePoolIdAndPermissionIdGroupingUtil",
 )
 
